--- a/Files/FilesHtml/informatique.html
+++ b/Files/FilesHtml/informatique.html
@@ -6,9 +6,7 @@
     dataLayer = [{'lang':"fr", 'page_type':"editorial", 'page_category':"langue francaise", 'page_subcategory':"dictionnaire de francais"}];         // Probleme compatiblitiy [<head></head>] & [Modify by C#]
 </script>
 <head id="Head1" prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#"><meta charset="utf-8" /><meta name="author" content="editions Larousse" /><meta name="viewport" content="width=device-width, initial-scale=1" http-equiv="Content-Type" />
-<title>
-	Definitions : informatique - Dictionnaire de francais Larousse
-</title>
+<title>Informatique - Dictionnaire de francais Larousse</title>
     <!-- integration[v.PROD]: regisPub + CNIL(v.OneTrust) -->
     <!-- ################################################ -->
     <!-- Demarrage de notification de consentement aux cookies de OneTrust -->
